<resources>
    <string name="app_name">IDontCare</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_guest_sign_in">Continue as Guest</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_text">Login with your username and password:</string>
    <string name="register_text">Or create a new login to save your results</string>
    <string name="guest_text">Or just continue as a guest!</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- Strings related to main activity layout -->
    <string name="mp_choose_text" translatable="false">Select <b>"Make List "</b> to add your favorite restaurants, or select <b>"I Don't Care"</b> to let Google Maps decide for you!</string>
    <string name="idc_button_text">I Don\'t Care</string>
    <string name="makelist_button_text">Make List</string>
    <string name="button_text">Pick Random</string>
    <string name="final_choice_text">Go Here</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings Activity -->
    <string name="diets_setting">Preferred Diets</string>
    <string name="vegan_check">Vegan</string>
    <string name="vegetarian_check">Vegetarian</string>
    <string name="price_setting">Preferred Prices</string>
    <string name="cheap_check">Cheap</string>
    <string name="inexpensive_check">Inexpensive</string>
    <string name="average_check">Average</string>
    <string name="expensive_check">Expensive</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_settings">settings</string>
    <string name="menu_settings">Settings</string>
    <string name="loginFailString">Email or Password is incorrect</string>
    <string name="defaultWeight">1</string>
    <string name="weightHint">Weight</string>
    <string name="radio2">2</string>
    <string name="radio3">3</string>
    <string name="radio4">4</string>
    <string name="radio5">5</string>
    <string name="homeButton">Home</string>

    <string name="style_json">
    [
      {
        \"featureType\": \"poi\",
        \"elementType\": \"all\",
        \"stylers\": [
          {
            \"visibility\": \"off\"
          }
        ]
      }
      {
        \"featureType\": \"poi.business\",
        \"elementType\": \"all\",
        \"stylers\": [
          {
            \"visibility\": \"on\"
          }
        ]
      }
    ]
    </string>
</resources>
